--- a/.github/workflows/build-backstage.yml
+++ b/.github/workflows/build-backstage.yml
@@ -78,7 +78,7 @@ jobs:
       run: |
         cd manifests
         NEW_TAG=$(echo "${{ needs.build-and-push.outputs.image-tag }}" | grep "main-" | head -1)
-        sed -i "s|image: .*backstage.*|image: $NEW_TAG|g" manifests/base/backstage-deployment.yaml
+        sed -i "s|image: .*plataforma.*|image: $NEW_TAG|g" manifests/base/backstage-deployment.yaml
        
 
     - name: Commit and push changes
