--- a/examples/org.yaml
+++ b/examples/org.yaml
@@ -5,7 +5,7 @@ kind: User
 metadata:
   name: guest
 spec:
-  memberOf: [guest]
+  memberOf: [guests]
 ---
 # https://backstage.io/docs/features/software-catalog/descriptor-format#kind-user
 apiVersion: backstage.io/v1alpha1
@@ -21,7 +21,7 @@ kind: User
 metadata:
   name: ispuert_cib
 spec:
-  memberOf: [guest]
+  memberOf: [guests]
 ---
 # https://backstage.io/docs/features/software-catalog/descriptor-format#kind-user
 apiVersion: backstage.io/v1alpha1
@@ -29,13 +29,13 @@ kind: User
 metadata:
   name: saloai_cib
 spec:
-  memberOf: [guest]
+  memberOf: [guests]
 ---
 # https://backstage.io/docs/features/software-catalog/descriptor-format#kind-group
 apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
-  name: guest
+  name: guests
 spec:
   type: team
   children: []
