--- a/.github/workflows/build-backstage.yml
+++ b/.github/workflows/build-backstage.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches: [main, develop]
     paths:
+    - 'examples/**'  
     - 'app/**'
     - 'packages/**'
     - 'Dockerfile'
