--- a/app-config.yaml
+++ b/app-config.yaml
@@ -1,6 +1,6 @@
 app:
   title: Scaffolded Backstage App
-  baseUrl: http://localhost:7007
+  baseUrl: http://localhost:3000
   listen:
     host: 0.0.0.0 # Added line, and now it's working
 
@@ -23,14 +23,12 @@ backend:
     # Content-Security-Policy directives follow the Helmet format: https://helmetjs.github.io/#reference
     # Default Helmet Content-Security-Policy values can be removed by setting the key to false
   cors:
-    origin: http://localhost:7007
+    origin: http://localhost:3000
     methods: [GET, HEAD, PATCH, POST, PUT, DELETE]
     credentials: true
   # This is for local development only, it is not recommended to use this in production
   # The production database configuration is stored in app-config.production.yaml
   database:
-    #client: better-sqlite3
-    #connection: ':memory:'
     client: pg
     connection:
       host: ${POSTGRES_HOST}
@@ -43,13 +41,11 @@ backend:
 integrations:
   github:
     - host: github.com
-      # This is a Personal Access Token or PAT from GitHub. You can find out how to generate this token, and more information
-      # about setting up the GitHub integration here: https://backstage.io/docs/integrations/github/locations#configuration
-      token: ${GITHUB_TOKEN}
+      token: ${GITOPS_TOKEN}
     ### Example for how to add your GitHub Enterprise instance using the API:
     # - host: ghe.example.net
     #   apiBaseUrl: https://ghe.example.net/api/v3
-    #   token: ${GHE_TOKEN}
+    #   token: ${GITOPS_TOKEN}
 
 proxy:
   ### Example for how to add a proxy endpoint for the frontend.
@@ -71,7 +67,6 @@ techdocs:
     type: 'local' # Alternatives - 'googleGcs' or 'awsS3'. Read documentation for using alternatives.
 
 auth:
-  allowGuestAccess: true
   # see https://backstage.io/docs/auth/ to learn about auth providers
   providers:
     # See https://backstage.io/docs/auth/guest/provider
@@ -79,6 +74,13 @@ auth:
 
 scaffolder:
   # see https://backstage.io/docs/features/software-templates/configuration for software template options
+  defaultAuthor:
+    name: Backstage
+    email: backstage@example.com
+  defaultCommitMessage: 'Initial commit from Backstage'
+  github:
+    token: ${GITOPS_TOKEN}
+    visibility: public
 
 catalog:
   import:
@@ -94,6 +96,12 @@ catalog:
     # Local example template
     - type: file
       target: ../../examples/template/template.yaml
+      rules:
+        - allow: [Template]
+
+    # ArgoCD Hola Mundo template
+    - type: file
+      target: ../../examples/argocd-template/template.yaml
       rules:
         - allow: [Template]
 
@@ -116,7 +124,28 @@ catalog:
 kubernetes:
   # see https://backstage.io/docs/features/kubernetes/configuration for kubernetes configuration options
 
+argocd:
+  # ArgoCD instance configuration for frontend plugin
+  # The frontend plugin connects directly to ArgoCD API
+  username: ${ARGOCD_USERNAME}
+  password: ${ARGOCD_PASSWORD}
+  # OR use token (recommended)
+  # token: ${ARGOCD_AUTH_TOKEN}
+  waitCycles: 25
+  appLocatorMethods:
+    - type: 'config'
+      instances:
+        - name: argoInstance1
+          url: ${ARGOCD_URL}
+          # Optional: skip TLS verification for self-signed certs
+          # skipTLSVerify: true
+
 # see https://backstage.io/docs/permissions/getting-started for more on the permission framework
 permission:
   # setting this to `false` will disable permissions
   enabled: true
+
+# see https://backstage.io/docs/permissions/getting-started for more on the permission framework
+permission:
+  # setting this to `false` will disable permissions
+  enabled: false
