--- a/app-config.yaml
+++ b/app-config.yaml
@@ -6,16 +6,13 @@ app:
 
 organization:
   name: My Company
-
-backend:
-  # Used for enabling authentication, secret is shared by all backend plugins
-  # See https://backstage.io/docs/auth/service-to-service-auth for
-  # information on the format
-  # auth:
-  #   keys:
-  #     - secret: ${BACKEND_SECRET}
+  backend:
+    auth:
+      providers:
+        guest: {}
+      dangerouslyAllowUnauthenticatedAccess: true
+      dangerouslyDisableDefaultAuthPolicy: true
   auth:
-    dangerouslyAllowUnauthenticatedAccess: true
     providers:
       guest: {}
   baseUrl: http://localhost:7007
