--- a/app-config.yaml
+++ b/app-config.yaml
@@ -6,30 +6,23 @@ app:
 
 organization:
   name: My Company
-  backend:
-    auth:
-      providers:
-        guest: {}
-      dangerouslyAllowUnauthenticatedAccess: true
-      dangerouslyDisableDefaultAuthPolicy: true
-  auth:
-    providers:
-      guest: {}
+
+backend:
   baseUrl: http://localhost:7007
   listen:
     port: 7007
-    # Uncomment the following host directive to bind to specific interfaces
-    # host: 127.0.0.1
+    host: 0.0.0.0
+  auth:
+    providers:
+      guest: {}
+    dangerouslyAllowUnauthenticatedAccess: true
+    dangerouslyDisableDefaultAuthPolicy: true
   csp:
     connect-src: ["'self'", 'http:', 'https:']
-    # Content-Security-Policy directives follow the Helmet format: https://helmetjs.github.io/#reference
-    # Default Helmet Content-Security-Policy values can be removed by setting the key to false
   cors:
     origin: http://localhost:3000
     methods: [GET, HEAD, PATCH, POST, PUT, DELETE]
     credentials: true
-  # This is for local development only, it is not recommended to use this in production
-  # The production database configuration is stored in app-config.production.yaml
   database:
     #client: better-sqlite3
     #connection: ':memory:'
@@ -39,6 +32,9 @@ organization:
       port: ${POSTGRES_PORT}
       user: ${POSTGRES_USER}
       password: ${POSTGRES_PASSWORD}
+auth:
+  providers:
+    guest: {}
 
   # workingDirectory: /tmp # Use this to configure a working directory for the scaffolder, defaults to the OS temp-dir
 
