feat: Complete Backstage + ArgoCD + GitOps platform
- Added comprehensive README with setup instructions
- Added .env.example for easy configuration
- Included all Backstage packages and configuration
- Added ArgoCD template with CI/CD workflow
- Added executive summary for management
- Excluded charts and gitops-apps (separate repos)
- All tokens use environment variables
- Ready for deployment to EKS with port-forward

--- a/examples/argocd-template/content/.github/workflows/ci.yaml
+++ b/examples/argocd-template/content/.github/workflows/ci.yaml
@@ -85,11 +85,8 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           
-          # Configurar autenticación con token
-          git config --global url."https://oauth2:{% raw %}${{ secrets.GITOPS_TOKEN }}{% endraw %}@github.com/".insteadOf "https://github.com/"
-          
           # Clonar repositorio GitOps
-          git clone https://github.com/{% raw %}${{ env.GITOPS_REPO }}{% endraw %}.git gitops-temp
+          git clone https://{% raw %}${{ secrets.GITOPS_TOKEN }}{% endraw %}@github.com/{% raw %}${{ env.GITOPS_REPO }}{% endraw %}.git gitops-temp
           cd gitops-temp
           
           # Crear branch para el cambio
