--- a/examples/argocd-template/gitops-values/argocd/applications/${{ values.environment }}/${{ values.name }}.yaml
+++ b/examples/argocd-template/gitops-values/argocd/applications/${{ values.environment }}/${{ values.name }}.yaml
@@ -36,6 +36,8 @@ spec:
       - CreateNamespace=true
       - PrunePropagationPolicy=foreground
       - PruneLast=true
+      - ServerSideApply=true
+      - RespectIgnoreDifferences=true
     retry:
       limit: 5
       backoff:
