--- a/app-config.yaml
+++ b/app-config.yaml
@@ -92,7 +92,11 @@ catalog:
       target: ../../examples/template/template.yaml
       rules:
         - allow: [Template]
-
+        # ArgoCD template
+    - type: file
+      target: ../../examples/argocd-template/template.yaml
+      rules:
+        - allow: [Template]
     # Local example organizational data
     - type: file
       target: ../../examples/org.yaml
